--- a/src/sass/site.sass
+++ b/src/sass/site.sass
@@ -14,7 +14,7 @@ $fa-font-path: "../bower_components/font-awesome/fonts/"
 
 // customize variables before bootstrap
 $icon-font-path: "../bower_components/bootstrap-sass/assets/fonts/bootstrap/"
-@import "superhero_variables.scss"
+@import "bills_superhero_variables.scss"
 
 // bootstrap is bootstrap-sass
 @import "../../public/bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss"
