--- a/src/sass/_theme.scss
+++ b/src/sass/_theme.scss
@@ -17,6 +17,24 @@ body {
   width: auto;
 }
 
+.control-label {
+    color: lighten($gray-light, 5%);
+}
+
+h1 {
+    margin-bottom: 2em;    
+}
+
+.form-control {
+    border-bottom: 1px solid lighten($gray-light, 5%);
+    box-shadow: none;
+}
+
+
+input, select {
+    font-family: "monospace";
+}
+
 input[type="file"].image-input {
     display: none;
 }
