--- a/public/index.html.tmpl
+++ b/public/index.html.tmpl
@@ -6,18 +6,24 @@
     <link href="css/site.css" rel="stylesheet" type="text/css">
   </head>
   <body>
+    <div id="flash_wrap">
+      <div id="flash">
+      </div>
+    </div>
+    <div id="app">
+    </div>
+    <div id="notes">
+    </div>
     <div id="qr-code-wrap" class="container hidden-sm hidden-xs">
         <div class="row">
-            <div class="col-md-4 col-md-offset-3">
+            <div class="col-md-4">
                 <!-- <p>Logo</p> -->
             </div>
-            <div class="col-md-3" style="text-align: right;">
+            <div class="col-md-3 pull-right" style="text-align: right;">
                 <p><a href="" id="qr-code-link"></a></p>
                 <!-- <canvas id="qr-code"></canvas> -->
             </div>
         </div>
-    </div>
-    <div id="app">
     </div>
     <script src="js/app.js" type="text/javascript"></script>
     <!--
