--- a/public/index.html.tmpl
+++ b/public/index.html.tmpl
@@ -6,6 +6,8 @@
     <link href="css/site.css" rel="stylesheet" type="text/css">
   </head>
   <body>
+    <div id="topbar">
+    </div>
     <div id="flash_wrap">
       <div id="flash">
       </div>
@@ -20,8 +22,9 @@
                 <!-- <p>Logo</p> -->
             </div>
             <div class="col-md-3 pull-right" style="text-align: right;">
-                <p><a href="" id="qr-code-link"></a></p>
-                <!-- <canvas id="qr-code"></canvas> -->
+              <p>v0.1.0</p>
+              <p><a href="" id="qr-code-link"></a></p>
+              <!-- <canvas id="qr-code"></canvas> -->
             </div>
         </div>
     </div>
